# opennixie

./: README.md
Arduino/: open-nixie.ino
Avr/openNixiem328/: openNixiem328.atsln
PiPico/: CMakeLists.txt  button.c  button.h  displayHAL.c  displayHAL.h  main.c  main.h  ntp_client.h  open_nixie.uf2
PiPicoPio/: CMakeLists.txt  display.pio  displayHAL.c  displayHAL.h  main.c  main.h  ntp_client.c  open_nixie.uf2
open-nixie_baseModule/: fp-info-cache  fp-lib-table  open-nixie_baseModule-cache.lib  open-nixie_baseModule.kicad_pcb  open-nixie_baseModule.kicad_pcb-bak  open-nixie_baseModule.net  open-nixie_baseModule.pro  open-nixie_baseModule.sch  open-nixie_baseModule.sch-bak
open-nixie_baseModule/open-nixie_baseModule.pretty/: CP_Radial_D8.0mm_P3.80mm.kicad_mod  C_0805_2012Metric_Pad1.15x1.40mm_HandSolder.kicad_mod  DC_Jack_Vertical.kicad_mod  DIP-8_W7.62mm_LongPads.kicad_mod  D_DO-41_SOD81_P12.70mm_Horizontal.kicad_mod  D_SOD-123.kicad_mod  Inductor_3_5.kicad_mod  LED_PLCC_2835_Handsoldering.kicad_mod  (+16 more)
open-nixie_displayModule/: fp-lib-table  nb_tubes.lib  open-nixie_displayModule-cache.lib  open-nixie_displayModule.kicad_pcb  open-nixie_displayModule.kicad_pcb-bak  open-nixie_displayModule.net  open-nixie_displayModule.pro  open-nixie_displayModule.sch
open-nixie_logicModuleM328/: fp-info-cache  fp-lib-table  open-nixie_logicModuleM328-cache.lib  open-nixie_logicModuleM328.kicad_pcb  open-nixie_logicModuleM328.kicad_pcb-bak  open-nixie_logicModuleM328.net  open-nixie_logicModuleM328.pro  open-nixie_logicModuleM328.sch  open-nixie_logicModuleM328.sch-bak
(+94 files in other folders)
